--- a/css/main.scss
+++ b/css/main.scss
@@ -1,53 +1,81 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
 ---
-@charset "utf-8";
 
+$grid-row-width: 1100px;
 
+@import "foundation";
+@include foundation-grid;
 
-// Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
+$yellow: #fcc803;
+$red: #ed0707;
+$blue: #0765ed;
+$green: #04a025;
 
-$spacing-unit:     30px;
-
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
-// Width of the content area
-$content-width:    800px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
-
-
-
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+// site wide overrides
+body {
+  font-family: "Montserrat";
+}
+h2 {
+  font-size: 46px;
+  a {
+    display: inline-block;
+    color: $yellow;
+  }
+}
+ul {
+  margin: 0;
+  padding: 0;
 }
 
+// site wide styling
+.button {
+  color: #fff;
+  background-color: $yellow;
+  padding: 25px 100px 15px 15px;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 700;
+  text-decoration: none;
+}
 
+// custom styling
+nav {
+  background-color: $yellow;
+  overflow: auto;
+  img {
+    width: 200px;
+    position: absolute;
+    display: inline-block;
+    margin-top: 10px;
+  }
+  ul {
+    display: inline-block;
+    list-style-type: none;
+    float: right;
+    li {
+      display: inline-block;
+      margin: 18px 0;
+      padding: 0 24px;
+      border-right: 2px solid #fff;
+      a {
+        font-size: 24px;
+        color: #fff;
+        font-weight: 700;
+        text-decoration: none;
+        line-height: 24px;
+      }
+    }
+    li:last-child {
+      border-right: none;
+    }
+  }
+}
 
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+#home {
+  .header {
+    background-image: url("../img/bg-header.jpg");
+    background-position: center;
+    background-size: cover;
+    padding: 210px 0;
+  }
+}
