--- a/css/main.scss
+++ b/css/main.scss
@@ -39,7 +39,7 @@ h3 {
     background-color: $yellow;
     position: absolute;
     width: 100%;
-    height: 60%;
+    height: 70%;
     left: 0;
     top: 50%;
     z-index: -1;
@@ -63,8 +63,14 @@ ul {
   font-weight: 700;
   text-decoration: none;
 }
+.button.large {
+  padding: 20px 60px 40px 15px;
+  font-style: italic;
+  font-size: 46px;
+  font-weight: 400;
+}
 .content {
-  padding: 40px 0;
+  padding: 40px 0 90px;
 }
 .text-right {
   text-align: right;
@@ -122,6 +128,33 @@ nav {
         display: inline-block;
         padding: 0 10px;
       }
+    }
+  }
+}
+
+#meet-the-team {
+  .intro {
+    padding-top: 250px;
+    background-size: cover;
+    background-position: 50% 30%;
+    background-image: url("../img/bg-team.jpg");
+    .banner {
+      background-color: rgba($green, 0.6);
+    }
+  }
+  .description {
+    background-color: $green;
+    background-image: url("../img/img-team.png");
+    background-position: 20% bottom;
+    background-repeat: no-repeat;
+    background-size: 35% auto;
+    p {
+      color: $white;
+      line-height: 1.6em;
+      padding: 40px 0;
+    }
+    a {
+      display: inline-block;
     }
   }
 }
