--- a/css/main.scss
+++ b/css/main.scss
@@ -62,6 +62,7 @@ ul {
   line-height: 24px;
   font-weight: 700;
   text-decoration: none;
+  display: inline-block;
 }
 .button.large {
   padding: 20px 60px 40px 15px;
@@ -71,6 +72,9 @@ ul {
 }
 .content {
   padding: 40px 0 90px;
+}
+.text-center {
+  text-align: center;
 }
 .text-right {
   text-align: right;
@@ -115,19 +119,20 @@ nav {
     background-size: cover;
     padding: 210px 0;
   }
-  .projects {
-    background-color: $blue;
-    p {
+}
+
+#projects {
+  background-color: $blue;
+  p {
+    color: $white;
+    font-style: italic;
+    font-size: 46px;
+    padding-top: 40px;
+    a {
       color: $white;
-      font-style: italic;
-      font-size: 46px;
-      padding-top: 40px;
-      a {
-        color: $white;
-        background-color: $yellow;
-        display: inline-block;
-        padding: 0 10px;
-      }
+      background-color: $yellow;
+      display: inline-block;
+      padding: 0 10px;
     }
   }
 }
@@ -153,8 +158,12 @@ nav {
       line-height: 1.6em;
       padding: 40px 0;
     }
-    a {
-      display: inline-block;
-    }
+  }
+}
+
+#involvement {
+  p {
+    line-height: 1.6em;
+    padding: 50px 0;
   }
 }
