--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,5 +37,10 @@
       </div>
     </nav>
     {{ content }}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
   </body>
 </html>
