--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -82,6 +82,10 @@ $global-margin: 1rem !default;
 /// @type Number
 $global-padding: 1rem !default;
 
+/// Global value used for margin between components.
+/// @type Number
+$global-margin: 1rem !default;
+
 /// Global font weight used for normal type.
 /// @type Keyword | Number
 $global-weight-normal: normal !default;
