--- a/css/main.scss
+++ b/css/main.scss
@@ -15,10 +15,17 @@ $white: #fff;
 
 // site wide overrides
 a {
+  color: $yellow;
   text-decoration: none;
 }
 body {
   font-family: "Montserrat";
+}
+h1 {
+  font-size: 58px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 h2 {
   font-size: 46px;
@@ -71,6 +78,12 @@ ul {
   font-size: 46px;
   font-weight: 400;
 }
+.button.small {
+  padding: 4px 15px 6px 4px;
+  font-size: 16px;
+  line-height: 18px;
+  font-style: italic;
+}
 .button.red {
   background-color: $red;
 }
@@ -112,6 +125,49 @@ nav {
     }
     li:last-child {
       border-right: none;
+    }
+  }
+}
+
+article {
+  header {
+    background-image: url("../img/bg-header.jpg");
+    background-position: center;
+    background-size: cover;
+    padding: 210px 0;
+    .post-meta {
+      text-align: center;
+      font-weight: 700;
+      font-size: 24px;
+    }
+  }
+  // style how blogs posts look here, this could be a large variety of tags
+  .post-content {
+    p {
+      font-size: 20px;
+      padding: 0 0 20px;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    h1, h2, h4, h5, h6 {
+      margin: 8px 0;
+    }
+    h1 {
+      font-size: 42px;
+    }
+    h2 {
+      font-size: 36px;
+    }
+    h3 {
+      font-size: 32px;
+      margin-bottom: 30px; // account for the yellow box
+    }
+    h4 {
+      font-size: 28px;
+    }
+    h5, h6 {
+      font-size: 24px;
     }
   }
 }
