--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
     <nav>
       <div class="row">
         <div class="small-12 columns">
-          <img src="img/logo-alley.png"/>
+          <a href="/">
+            <img src="/img/logo-alley.png"/>
+          </a>
           <ul>
             <li>
               <a href="#">
@@ -38,7 +40,7 @@
     </nav>
     {{ content }}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="js/foundation.min.js"></script>
+    <script src="/js/foundation.min.js"></script>
     <script>
       $(document).foundation();
     </script>
