A wee bit of responsiveness

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 <html>
   {% include head.html %}
   <body>
-    {% include nav.html all_links=true %}
+    {% include nav.html %}
     {{ content }}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="/js/foundation.min.js"></script>
