Post images, and the crew
Minor css updates, added functionality to have a features image for
each post, added the Meet the Crew page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="scrollto" data-element="meet-the-team">
+            <a href="/alley-crew.html">
               meet the team
             </a>
           </li>
