--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,18 +10,13 @@
       <ul>
         {% if include.all_links %}
           <li>
-            <a href="#" class="scrollto" data-element="nav">
+            <a href="/index.html">
               home
             </a>
           </li>
           <li>
-            <a href="#" class="scrollto" data-element="updates">
+            <a href="/updates.html">
               updates
-            </a>
-          </li>
-          <li>
-            <a href="#" class="scrollto" data-element="projects">
-              projects
             </a>
           </li>
           <li>
@@ -36,7 +31,7 @@
           </li>
         {% else %}
           <li>
-            <a href="/">
+            <a href="/updates.html">
               home
             </a>
           </li>
