--- a/css/main.scss
+++ b/css/main.scss
@@ -167,6 +167,29 @@ nav {
   }
 }
 
+footer {
+  #tech {
+    background-color: $yellow;
+    min-height: 55px;
+    overflow: auto;
+    padding: 0 10px;
+    img {
+      width: 170px;
+      padding-top: 10px;
+      display: inline-block;
+    }
+    p {
+      font-size: 10px;
+      display: inline-block;
+      padding-top: 15px;
+    }
+  }
+  #most-recent {
+    float: left;
+    margin-right: 20px;
+  }
+}
+
 @media screen and (max-width: $medium-break-point) {
   nav {
     min-height: auto;
@@ -311,8 +334,19 @@ article {
   }
 }
 
+@media screen and (max-width: $medium-break-point) {
+  #meet-the-team {
+    .description {
+      background-size: 400px auto;
+    }
+  }
+}
+
 #crew {
+  border-bottom: 1px $green solid;
   .member {
+    padding: 10px;
+    height: 450px;
     .member-photo {
       width: 150px;
       height:150px;
@@ -322,7 +356,6 @@ article {
       border-radius: 50%;
       margin: auto;
     }
-    padding: 10px;
     h2 {
       font-size: 26px;
       margin: 0;
@@ -333,7 +366,7 @@ article {
       }
       a:hover {
         color: $yellow;
-}
+      }
     }
     h3 {
       font-size: 20px;
@@ -367,6 +400,15 @@ article {
   }
 }
 
+@media screen and (max-width: $medium-break-point) {
+  #projects {
+    p {
+      font-size: 24px;
+      padding-top: 40px;
+    }
+  }
+}
+
 #updates {
   background-color: $red;
   .recent-post {
@@ -393,6 +435,62 @@ article {
         bottom: 36px;
         left: 36px;
       }
+    }
+  }
+}
+
+#updates-list {
+  padding-bottom: 50px;
+  border-bottom: 1px $red solid;
+  .intro {
+    padding-top: 250px;
+    background-size: cover;
+    background-position: 50% 30%;
+    background-image: url("../img/img-concept.png");
+    .banner {
+      background-color: rgba($red, 0.8);
+    }
+  }
+}
+
+#updates-list-view {
+  .update {
+    padding: 10px;
+    height: 450px;
+    .update-photo {
+      width: 100%;
+      height:150px;
+      background-size: 100%;
+      background-position: center;
+      background-image: url('../img/bg-header.jpg');
+      position: relative;
+      padding: 0;
+      margin: 0;
+      transition: background-size 0.5s;
+      -webkit-transition: background-size 0.5s;
+    }
+    .update-photo:hover {
+      background-size: 110%;
+    }
+    h3 {
+      font-size: 20px;
+      margin: 0 0 15px;
+      width: 100%;
+      padding: 0;
+      text-align: center;
+    }
+    a {
+      color: black;
+      text-decoration: none;
+    }
+    a:hover {
+      color: $red;
+    }
+    p {
+      font-size: 16px;
+      margin: 0;
+      color: black;
+      padding-bottom: 5px;
     }
   }
 }
