--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
           you find your space in the alley crew! :)
         </p>
         <div class="text-right">
-          <a href="mailto:bradleyt@mtu.edu?subject=Makerspace Involvement" target="_blank" class="large button">
+          <a href="mailto:makerspace@mtu.edu?subject=Makerspace Involvement" target="_blank" class="large button">
             contact us
           </a>
         </div>
@@ -28,7 +28,16 @@
           <img src="/img/logo-mtu.png"/>
         </a>
       </div>
-      <div class="small-8 columns">
+      <div id="social-footer" class="small-8 columns">
+        <a id="email-signup" href="http://eepurl.com/bKQAsf">
+          Sign up for email updates!
+        </a>
+        <a href="http://www.twitter.com/makerspacemtu">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="http://www.facebook.com/makerspacemtu">
+          <i class="fa fa-facebook"></i>
+        </a>
       </div>
     </div>
   </div>
