--- a/css/main.scss
+++ b/css/main.scss
@@ -56,6 +56,7 @@ h3 {
     z-index: -1;
   }
 }
+
 p {
   margin: 0;
 }
@@ -342,11 +343,27 @@ article {
   }
 }
 
+#social-footer {
+  padding-top: 18px;
+  text-align: right;
+  a {
+    color: $white;
+    //background-color: #000;
+    padding: 5px;
+    //border-radius: 5px;
+    //min-width: 30px;
+    margin-right: 10px;
+  }
+  .email-signup {
+
+  }
+}
+
 #crew {
   border-bottom: 1px $green solid;
   .member {
     padding: 10px;
-    height: 450px;
+    height: 300px;
     .member-photo {
       width: 150px;
       height:150px;
@@ -369,6 +386,13 @@ article {
       }
     }
     h3 {
+      font-size: 20px;
+      margin: 0 0 15px;
+      width: 100%;
+      padding: 0;
+      text-align: center;
+    }
+    h4 {
       font-size: 20px;
       margin: 0 0 15px;
       width: 100%;
