Navigate back from project

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -34,7 +34,7 @@
               get involved
             </a>
           </li>
-        {% else if include.projects %}
+        {% elsif include.projects %}
           <li>
             <a href="/projects.html">
               back to projects
