--- a/_includes/project-footer.html
+++ b/_includes/project-footer.html
@@ -6,7 +6,7 @@
           More Cool Projects!
         </h4>
         <h4>
-          <a href="/updates.html" class="small button">
+          <a href="/projects.html" class="small button">
           Check out all of the projects!
         </a>
         </h4>
