--- a/_layouts/project-page.html
+++ b/_layouts/project-page.html
@@ -2,7 +2,7 @@
 <html>
   {% include head.html %}
   <body>
-    {% include nav.html %}
+    {% include nav.html projects=true %}
     {{ content }}
     {% include project-footer.html %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
