Coach sign up and nav changes
- updates to the nav bar
- new post about maker coaches
- maker coach signup link from Alley Crew

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,10 +8,7 @@
           </h3>
         </div>
         <p>
-          Interested in helping out in some way, shape, or form? Maybe you have some great ideas you want to
-          share, or maybe you even want to volunteer to oversee the space for a bit once it opens. There are
-          tons of ways to get involved in this awesome project. Send us a quick email by clicking the below and we will help
-          you find your space in the alley crew! :)
+          Interested in helping out in some way, shape, or form? Maybe you have some great ideas you want to share, or maybe you even want to volunteer to oversee the space for a bit once it opens. There are tons of ways to get involved in this awesome project. Send us a quick email by clicking the link below and we will help you find your space in the alley crew! :)
         </p>
         <div class="text-right">
           <a href="mailto:makerspace@mtu.edu?subject=Makerspace Involvement" target="_blank" class="large button">
