--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
           </li>
           <li>
             <a href="/alley-crew.html">
-              meet the team
+              the team
             </a>
           </li>
           <li>
