--- a/css/main.scss
+++ b/css/main.scss
@@ -151,9 +151,9 @@ nav {
       display: inline-block;
       margin: 18px 0;
       padding: 0 24px;
-      border-right: 2px solid $white;
+      //border-right: 2px solid $white;
       a {
-        font-size: 24px;
+        font-size: 20px;
         color: $white;
         font-weight: 700;
         line-height: 24px;
@@ -304,12 +304,20 @@ article {
     background-size: cover;
     padding: 210px 0;
   }
+  i {
+    font-size: 36px;
+    margin-left: 15px;
+  }
 }
 
 @media screen and (max-width: $medium-break-point) {
   #home {
     .header {
       padding: 60px 0;
+    }
+    i {
+      font-size: 24px;
+      margin-left: 15px;
     }
   }
 }
@@ -487,6 +495,15 @@ article {
       font-size: 24px;
       padding-top: 40px;
     }
+  }
+}
+
+#story {
+  background-color: $yellow;
+  p {
+    color: $white;
+    padding: 30px 0 0;
+    line-height: 1.6em;
   }
 }
 
