--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="small-12 medium-8 medium-push-2 columns">
         <div class="text-center">
-          <h3>
+          <h3 class="green">
             get involved!
           </h3>
         </div>
@@ -14,7 +14,7 @@
           you find your space in the alley crew! :)
         </p>
         <div class="text-right">
-          <a href="mailto:makerspace@mtu.edu?subject=Makerspace Involvement" target="_blank" class="large button">
+          <a href="mailto:makerspace@mtu.edu?subject=Makerspace Involvement" target="_blank" class="large green button">
             contact us
           </a>
         </div>
