--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -44,7 +44,16 @@
           <img src="/img/logo-mtu.png"/>
         </a>
       </div>
-      <div class="small-8 columns">
+      <div id="social-footer" class="small-8 columns">
+        <a id="email-signup" href="http://eepurl.com/bKQAsf">
+          Sign up for email updates!
+        </a>
+        <a href="http://www.twitter.com/makerspacemtu">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="http://www.facebook.com/makerspacemtu">
+          <i class="fa fa-facebook"></i>
+        </a>
       </div>
     </div>
   </div>
