start on the wiki

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,24 +18,5 @@
       </div>
     </div>
   </div>
-  <div id="tech">
-    <div class="row">
-      <div class="small-4 columns">
-        <a href="http://www.mtu.edu">
-          <img src="/img/logo-mtu.png"/>
-        </a>
-      </div>
-      <div id="social-footer" class="small-8 columns">
-        <a id="email-signup" href="http://eepurl.com/bKQAsf">
-          Sign up for email updates!
-        </a>
-        <a href="http://www.twitter.com/makerspacemtu">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <a href="http://www.facebook.com/makerspacemtu">
-          <i class="fa fa-facebook"></i>
-        </a>
-      </div>
-    </div>
-  </div>
+  {% include minimal_footer.html %}
 </footer>
