--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,11 +19,11 @@
               updates
             </a>
           </li>
-          <!-- <li>
-            <a href="/projects.html">
-              projects
+          <li>
+            <a href="/wiki/">
+              wiki
             </a>
-          </li> -->
+          </li>
           <li>
             <a href="/alley-crew.html">
               the team
