--- a/_includes/project-footer.html
+++ b/_includes/project-footer.html
@@ -34,15 +34,5 @@
       </div>
     </div>
   </div>
-  <div id="tech">
-    <div class="row">
-      <div class="small-4 columns">
-        <a href="http://www.mtu.edu">
-          <img src="/img/logo-mtu.png"/>
-        </a>
-      </div>
-      <div class="small-8 columns">
-      </div>
-    </div>
-  </div>
+  {% include minimal_footer.html %}
 </footer>
