a few styling tweaks

--- a/_layouts/wiki.html
+++ b/_layouts/wiki.html
@@ -6,9 +6,9 @@
     <div class="content">
       <div class="row">
         <div class="small-12 columns">
-          <h2>
+          <h3 class="green">
             {{ page.title }}
-          </h2>
+          </h3>
 
           {{ content }}
         </div>
