add basic wiki content

--- a/_layouts/wiki.html
+++ b/_layouts/wiki.html
@@ -2,8 +2,8 @@
 <html>
   {% include head.html %}
   <body>
-    {% include nav.html %}
-    <div class="content">
+    {% include nav.html wiki=true %}
+    <div class="content wiki">
       <div class="row">
         <div class="small-12 columns">
           <h3 class="green">
