--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -40,12 +40,18 @@
               back to projects
             </a>
           </li>
-          {% else %}
-            <li>
-              <a href="/updates.html">
-                back to updates
-              </a>
-            </li>
+        {% elsif include.wiki %}
+          <li>
+            <a href="/wiki">
+              back to wiki
+            </a>
+          </li>
+        {% else %}
+          <li>
+            <a href="/updates.html">
+              back to updates
+            </a>
+          </li>
         {% endif %}
       </ul>
     </div>
