more sections and tweak styles a bit

--- a/_sass/wiki.scss
+++ b/_sass/wiki.scss
@@ -16,9 +16,19 @@
   h4 {
     text-transform: capitalize;
     margin: 10px 0;
+    font-size: 28px;
+  }
+
+  h5 {
+    margin: 10px 0;
+    font-size: 20px;
   }
 
   ul {
     padding-left: 30px;
+  }
+
+  p {
+    margin: 15px 0;
   }
 }
