--- a/_sass/wiki.scss
+++ b/_sass/wiki.scss
@@ -16,7 +16,8 @@
   h4 {
     text-transform: capitalize;
     margin: 10px 0;
-    font-size: 28px;
+    font-size: 24px;
+    color: $blue;
   }
 
   h5 {
