--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,6 +25,11 @@
             </a>
           </li>
           <li>
+            <a href="/events/">
+              events
+            </a>
+          </li>
+          <li>
             <a href="/alley-crew.html">
               the team
             </a>
