finish up events

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -51,6 +51,12 @@
               back to wiki
             </a>
           </li>
+        {% elsif include.event %}
+          <li>
+            <a href="/events/">
+              back to events
+            </a>
+          </li>
         {% else %}
           <li>
             <a href="/updates.html">
