--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -8,10 +8,20 @@
       <div class="hero__content">
         <div class="hero__header">
           {{ page.title }}
-          <div class="hero__header-subtext">
-            <i class="fa fa-clock-o"></i> {{ page.start_date | date: "%l:%M %p"  }} - {{ page.end_date | date: "%l:%M %p, %b %-d, %Y" }}
-          </div>
         </div>
+      </div>
+    </div>
+
+    <div class="hero__sub-hero">
+      <div class="hero__sub-hero-content">
+        <span class="hero__details">
+          <i class="fa fa-clock-o"></i> {{ page.start_date | date: "%l:%M %p"  }} - {{ page.end_date | date: "%l:%M %p, %b %-d, %Y" }}
+        </span>
+
+        <a href="{{ page.rsvp_url }}" class="hero__rsvp">
+          <i class="fa fa-star"></i>
+          RSVP to Attend
+        </a>
       </div>
     </div>
 
@@ -22,6 +32,22 @@
         </div>
       </div>
     </div>
+
+    <div class="hero__sub-hero">
+      <div class="hero__sub-hero-content">
+        <span class="hero__details">
+          Want to join? Sign up now to attend!
+        </span>
+
+        <a href="{{ page.rsvp_url }}" class="hero__rsvp">
+          <i class="fa fa-star"></i>
+          RSVP to Attend
+        </a>
+      </div>
+    </div>
+
+    {% include minimal_footer.html %}
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="/js/foundation.min.js"></script>
     <script src="/js/app.js"></script>
