--- a/css/main.scss
+++ b/css/main.scss
@@ -664,7 +664,9 @@ article {
   &__header {
     position: absolute;
     bottom: 10px;
-    left: 20px;
+    padding: 0 20px;
+    left: 0;
+    right: 0;
     color: $white;
     font-size: 48px;
     font-weight: bold;
@@ -672,11 +674,43 @@ article {
 
     @media screen and (max-width: $medium-break-point) {
       font-size: 32px;
+      text-align: center;
     }
   }
 
-  &__header-subtext {
-    display: block;
-    font-size: 0.5em;
+  &__sub-hero {
+    padding: 20px;
+    width: 100%;
+    background-color: $blue;
+    color: $white;
+    font-size: 24px;
+
+    @media screen and (max-width: $medium-break-point) {
+      font-size: 16px;
+      text-align: center;
+    }
+
+    &-content {
+      margin: 0 auto;
+      max-width: 1100px;
+    }
+  }
+
+  &__details {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 20px;
+  }
+
+  &__rsvp {
+    background-color: $green;
+    color: $white;
+    border-radius: 3px;
+    padding: 6px 12px;
+    display: inline-block;
+    font-size: 16px;
+    text-shadow: none;
+    vertical-align: middle;
+    line-height: 1em;
   }
 }
