add new team members and update event

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
             </a>
           </li>
           <li>
-            <a href="/alley-crew.html">
+            <a href="/alley-crew/">
               the team
             </a>
           </li>
