--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@ $grid-row-width: $medium-break-point;
 @import "wiki";
 @import "colors";
 @import "card";
+@import "member";
 @include foundation-global-styles;
 @include foundation-grid;
 
@@ -397,55 +398,6 @@ article {
   }
   .email-signup {
 
-  }
-}
-
-#crew {
-  border-bottom: 1px $green solid;
-  .member {
-    padding: 10px;
-    height: 300px;
-    .member-photo {
-      width: 150px;
-      height:150px;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: 150px auto;
-      border-radius: 50%;
-      margin: auto;
-    }
-    h2 {
-      font-size: 26px;
-      margin: 0;
-      text-align: center;
-      a {
-        color: black;
-        text-decoration: none;
-      }
-      a:hover {
-        color: $purple;
-      }
-    }
-    h3 {
-      font-size: 20px;
-      margin: 0 0 15px;
-      width: 100%;
-      padding: 0;
-      text-align: center;
-    }
-    h4 {
-      font-size: 20px;
-      margin: 0 0 15px;
-      width: 100%;
-      padding: 0;
-      text-align: center;
-    }
-    p {
-      font-size: 16px;
-      margin: 0;
-      color: black;
-      padding-bottom: 5px;
-    }
   }
 }
 
