--- a/_sass/wiki.scss
+++ b/_sass/wiki.scss
@@ -32,4 +32,20 @@
   p {
     margin: 15px 0;
   }
+
+  &__side-menu-category {
+    color: $blue;
+    text-transform: capitalize;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 6px 0;
+  }
+
+  &__side-menu-link {
+    font-size: 13px;
+  }
+
+  &__side-menu {
+
+  }
 }
