--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,70 +1,46 @@
-<nav id="nav">
+<nav class="nav">
   <div class="row">
     <div class="small-12 columns">
-      <a href="/">
-        <img src="/img/logo-alley.png"/>
-      </a>
-      <a href="#" class="menu">
-        <i class="fa fa-bars"></i>
-      </a>
-      <ul>
-        {% if include.all_links %}
-          <li>
-            <a href="/index.html">
-              home
+      <div class="nav__container">
+        <a href="/" class="nav__logo-link">
+          <img src="/img/logo-alley-white.png" class="nav__logo" />
+        </a>
+        <a href="#" class="nav__menu-toggle" class="nav__link">
+          <i class="fa fa-bars"></i>
+        </a>
+        <ul class="nav__link-list">
+          <li class="nav__link-item">
+            <a href="/index.html" class="nav__link">
+              Home
             </a>
           </li>
-          <li>
-            <a href="/updates.html">
-              updates
+          <li class="nav__link-item">
+            <a href="/events/" class="nav__link">
+              Events
             </a>
           </li>
-          <li>
-            <a href="/wiki/">
-              wiki
+          <li class="nav__link-item">
+            <a href="/updates.html" class="nav__link">
+              Blog
             </a>
           </li>
-          <li>
-            <a href="/events/">
-              events
+          <li class="nav__link-item">
+            <a href="/wiki/" class="nav__link">
+              Wiki
             </a>
           </li>
-          <li>
-            <a href="/alley-crew/">
-              the team
+          <li class="nav__link-item">
+            <a href="/alley-crew/" class="nav__link">
+              The Team
             </a>
           </li>
-          <li>
-            <a href="#" class="scrollto" data-element="involvement">
-              get involved
+          <li class="nav__link-item">
+            <a href="#" class="scrollto nav__link" data-element="involvement">
+              Contact
             </a>
           </li>
-        {% elsif include.projects %}
-          <li>
-            <a href="/projects.html">
-              back to projects
-            </a>
-          </li>
-        {% elsif include.wiki %}
-          <li>
-            <a href="/wiki">
-              back to wiki
-            </a>
-          </li>
-        {% elsif include.event %}
-          <li>
-            <a href="/events/">
-              back to events
-            </a>
-          </li>
-        {% else %}
-          <li>
-            <a href="/updates.html">
-              back to updates
-            </a>
-          </li>
-        {% endif %}
-      </ul>
+        </ul>
+      </diV>
     </div>
   </div>
 </nav>
