--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,7 +2,7 @@
 <html>
   {% include head.html %}
   <body>
-    <!--{% include nav.html all_links=true %}-->
+    {% include nav.html %}
     {{ content }}
     <!--{% include full_footer.html %}-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
