update footer, add call to action and link to social media

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,7 +4,7 @@
   <body>
     {% include nav.html %}
     {{ content }}
-    <!--{% include full_footer.html %}-->
+    {% include footer.html %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="/js/foundation.min.js"></script>
     <script src="/js/app.js"></script>
