style landing page

--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -4,7 +4,7 @@
       <h2 class="call-to-action__header">
         Stop by Monday - Thursday, 3:00 - 9:00pm in the MUB Basement
       </h2>
-      <a href="#" class="button">
+      <a href="{{ site.email_updates_url }}" class="button">
         Sign up for updates!
       </a>
       <a href="mailto:{{ site.email_address }}" class="button" target="_blank">
