--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,8 @@
 $medium-break-point: 1100px;
 $grid-row-width: $medium-break-point;
 
+$small-break-point: 640px;
+
 $border-radius: 3px;
 
 // variables and general styles
