--- a/_sass/button.scss
+++ b/_sass/button.scss
@@ -9,4 +9,7 @@
   color: $green;
   text-decoration: none;
   margin-right: 20px;
+  line-height: 1em;
+  display: inline-block;
+  margin: 0 4px 4px 0;
 }
