--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -6,5 +6,9 @@
   &__logo {
     height: 70px;
     margin: 0 10px;
+
+    @media screen and (max-width: $medium-break-point) {
+      height: 40px;
+    }
   }
 }
