--- a/_sass/hero.scss
+++ b/_sass/hero.scss
@@ -1,10 +1,12 @@
 .hero {
   width: 100%;
-  padding: 120px 0;
+  padding: 0 0 120px;
   position: relative;
   background-position: center;
   background-size: cover;
   z-index: 1;
+  font-size: 80px;
+  line-height: 0;
 
   &--home {
     background-image: url('/img/home-hero.jpg');
@@ -24,9 +26,21 @@
   &__header {
     color: $white;
     font-family: Montserrat;
-    font-size: 80px;
+    font-size: 1em;
     font-weight: bold;
     line-height: 1.2;
-    margin: 0 0 40px;
+    margin: 60px 0 40px;
+
+    @media screen and (max-width: $medium-break-point) {
+      font-size: 0.6em;
+    }
+
+    @media screen and (max-width: $small-break-point) {
+      font-size: 0.4em;
+    }
+  }
+
+  &__buttons {
+    font-size: 0;
   }
 }
