--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -1,51 +1,75 @@
 .nav {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-
-  &__container {
-    display: flex;
-    justify-content: space-between;
-  }
+  font-size: 16px;
+  line-height: 1;
 
   &__logo-link {
     display: inline-block;
+    vertical-align: top;
   }
 
   &__logo {
     display: inline-block;
     height: 60px;
-    padding: 10px;
+    margin: 10px;
+
+    @media screen and (max-width: $medium-break-point) {
+      height: 40px;
+    }
   }
 
   &__menu-toggle {
     display: none;
+    font-size: 30px;
+    margin: 15px 0 0;
+    color: $white;
+    float: right;
+
+    @media screen and (max-width: $medium-break-point) {
+      display: inline-block;
+    }
   }
 
   &__link-list {
-    display: inline-block;
     list-style-type: none;
-    padding: 0;
     margin: 0;
+    float: right;
+    text-align: right;
+
+    @media screen and (min-width: $medium-break-point + 1) {
+      display: block !important;
+    }
+
+    @media screen and (max-width: $medium-break-point) {
+      display: none;
+      float: none;
+    }
   }
 
   &__link {
     display: inline-block;
     font-weight: bold;
     color: $white;
-    padding: 15px 0;
+    padding: 20px 0;
     margin: 0 15px;
     text-decoration: none;
 
-    &:hover {
-      padding-top: 5px;
-      border-top: 10px solid $white;
+    @media screen and (max-width: $medium-break-point) {
+      margin: 0;
+    }
+
+    @media screen and (min-width: $medium-break-point + 1) {
+      &:hover {
+        padding-top: 10px;
+        border-top: 10px solid $white;
+      }
     }
   }
 
   &__link-item {
     display: inline-block;
+
+    @media screen and (max-width: $medium-break-point) {
+      display: block;
+    }
   }
 }
