--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -4,6 +4,10 @@
   font-weight: bold;
   color: $green;
   margin: 40px 0 10px;
+
+  @media screen and (max-width: $medium-break-point) {
+    font-size: 24px;
+  }
 }
 
 p {
@@ -14,4 +18,8 @@ p {
   line-height: 1.5;
   color: #232323;
   margin: 0;
+
+  @media screen and (max-width: $medium-break-point) {
+    font-size: 18px;
+  }
 }
