--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -25,6 +25,7 @@
       </div>
     </div>
     {{ content }}
+    {% include call_to_action.html %}
     {% include footer.html %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="/js/foundation.min.js"></script>
