move updates to blog and minor other updates

--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -2,26 +2,31 @@
 <html>
   {% include head.html %}
   <body>
-    {% include nav.html event=true %}
+    <div class="hero hero--home">
+      <div class="row">
+        <div class="small-12 columns">
+          {% include nav.html %}
+          <h1 class="hero__header">
+            {{ page.title }}
+          </h1>
+          <div class="hero__buttons">
+            <a href="{{ page.rsvp_url }}" class="button" target="_blank">
+              <i class="fa fa-star"></i>
+              RSVP to Attend
+            </a>
 
-    <div class="hero" style="background-image: url('{{ page.background_url }}');">
-      <div class="hero__content">
-        <div class="hero__header">
-          {{ page.title }}
+            <a href="{{ page.rsvp_url }}" class="button" target="_blank">
+              <i class="fa fa-clock-o"></i> {{ page.start_date | date: "%l:%M %p"  }} - {{ page.end_date | date: "%l:%M %p, %b %-d, %Y" }}
+            </a>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="hero__sub-hero">
       <div class="hero__sub-hero-content">
-        <span class="hero__details">
-          <i class="fa fa-clock-o"></i> {{ page.start_date | date: "%l:%M %p"  }} - {{ page.end_date | date: "%l:%M %p, %b %-d, %Y" }}
-        </span>
 
-        <a href="{{ page.rsvp_url }}" class="hero__rsvp">
-          <i class="fa fa-star"></i>
-          RSVP to Attend
-        </a>
+
       </div>
     </div>
 
@@ -36,17 +41,29 @@
     <div class="hero__sub-hero">
       <div class="hero__sub-hero-content">
         <span class="hero__details">
-          Want to join? Sign up now to attend!
+
         </span>
 
-        <a href="{{ page.rsvp_url }}" class="hero__rsvp">
-          <i class="fa fa-star"></i>
-          RSVP to Attend
-        </a>
+
       </div>
     </div>
 
-    {% include minimal_footer.html %}
+    <div class="call-to-action">
+      <div class="row">
+        <div class="small-12 columns">
+          <h2 class="call-to-action__header">
+            Want to join? Sign up now to attend!
+          </h2>
+          <a href="{{ page.rsvp_url }}" class="button" target="_blank">
+            <i class="fa fa-star"></i>
+            RSVP to Attend
+          </a>
+        </div>
+      </div>
+    </div>
+
+
+    {% include footer.html %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="/js/foundation.min.js"></script>
