--- a/_sass/button.scss
+++ b/_sass/button.scss
@@ -12,4 +12,9 @@
   line-height: 1em;
   display: inline-block;
   margin: 0 4px 4px 0;
+
+  &.block {
+    display: block;
+    text-align: center;
+  }
 }
