--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
           </a>
         </li>
         <li class="nav__link-item">
-          <a href="/updates.html" class="nav__link">
+          <a href="/blog/" class="nav__link">
             Blog
           </a>
         </li>
