--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -4,9 +4,14 @@
   font-weight: bold;
   color: $green;
   margin: 40px 0 10px;
+  text-decoration: none;
 
   @media screen and (max-width: $medium-break-point) {
     font-size: 24px;
+  }
+
+  &.small {
+    font-size: 20px;
   }
 }
 
@@ -17,9 +22,17 @@ p {
   font-style: normal;
   line-height: 1.5;
   color: #232323;
-  margin: 0;
+  margin: 0 0 8px;
 
   @media screen and (max-width: $medium-break-point) {
     font-size: 18px;
   }
+
+  &.small {
+    font-size: 16px;
+  }
+}
+
+a {
+  color: $green;
 }
