rename to team, contact scroll to

--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -1,4 +1,4 @@
-<div class="call-to-action">
+<div class="call-to-action" id="call-to-action">
   <div class="row">
     <div class="small-12 columns">
       <h2 class="call-to-action__header">
