--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,12 +29,12 @@
           </a>
         </li>
         <li class="nav__link-item">
-          <a href="/alley-crew/" class="nav__link">
+          <a href="/team/" class="nav__link">
             The Team
           </a>
         </li>
         <li class="nav__link-item">
-          <a href="#" class="scrollto nav__link" data-element="involvement">
+          <a href="#" class="scrollto nav__link scrollto" data-element="call-to-action">
             Contact
           </a>
         </li>
