Updates for Magann
- added new advisors and coaches
- fixed disappearing nav issue

--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -14,8 +14,8 @@
       <a href="{{ site.facebook_url }}" class="button" target="_blank">
         <i class="fa fa-facebook"></i>
       </a>
-      <a href="{{ site.twitter_url }}" class="button" target="_blank">
-        <i class="fa fa-twitter"></i>
+      <a href="{{ site.instagram_url }}" class="button" target="_blank">
+        <i class="fa fa-instagram"></i>
       </a>
     </div>
   </div>
