--- a/_includes/minimal_footer.html
+++ b/_includes/minimal_footer.html
@@ -9,10 +9,10 @@
       <a id="email-signup" href="http://eepurl.com/bKQAsf">
         Sign up for email updates!
       </a>
-      <a href="http://www.twitter.com/makerspacemtu">
-        <i class="fa fa-twitter"></i>
+      <a href="{{ site.instagram_url }}">
+        <i class="fa fa-instagram"></i>
       </a>
-      <a href="http://www.facebook.com/makerspacemtu">
+      <a href="{{ site.facebook_url }}">
         <i class="fa fa-facebook"></i>
       </a>
     </div>
