--- a/_layouts/wiki.html
+++ b/_layouts/wiki.html
@@ -2,7 +2,7 @@
 <html>
   {% include head.html %}
   <body>
-    {% include nav.html wiki=true %}
+    {% include nav.html wiki=true bg=true%}
     <div class="content wiki">
       <div class="row">
         <div class="small-12 columns">
