--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,6 @@
-<nav class="nav">
+<nav class="nav {% if include.bg == true %}
+  bg-nav
+{% endif %}">
   <div class="row">
     <div class="small-12 columns">
       <a href="/" class="nav__logo-link">
