Added sponsor images
- added sponsor images. Not doing this dynamically for now since Magann
just wanted the easiest way to edit

--- a/css/main.scss
+++ b/css/main.scss
@@ -26,6 +26,7 @@ $border-radius: 3px;
 @import "button";
 @import "call_to_action";
 @import "events";
+@import "sponsor";
 
 @include foundation-global-styles;
 @include foundation-grid;
