Adds a small update, containing information about COVID-19 occupancy,to main.html

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,6 +10,9 @@
             Your space to<br/>
             bring projects to life
           </h1>
+		  <p style="color: #FFFFFF; font-size: 16px; margin: 0px 0 40px;">
+			The makerspace occupancy has been limited to 20 due to the COVID-19 pandemic.
+		  </p>
           <div class="hero__buttons">
             <a href="{{ site.email_updates_url }}" class="button">
               Sign up for updates!
