Updated the main home page as well as the mission statement to acuratly reflect the current makerspace hours.

--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="small-12 columns">
       <h2 class="call-to-action__header">
-        Stop by Monday - Thursday, 3:00 - 9:00pm in the MUB Basement
+        Make Something Awesome in the Alley Makerspace!
       </h2>
       <a href="{{ site.email_updates_url }}" class="button">
         Sign up for updates!
